--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  background-color: black;
+  background-color: #030303;
 }
 form {
   display: flex;
@@ -57,29 +57,47 @@ margin-top: 24px;
 .icon .fa-solid fa-eye{
   position: absolute;
 }
+
 .adminDashboard {
   color:white;
   text-align: center;
+
+}
+.adminDashboard h1{
+  font-size: 32px;
+}
+.songRequest{
+display: flex;
+justify-content: center;
+margin-left: 100px;
+
 }
 .songInfo {
-margin-left: 24%;
   display: flex;
   flex-wrap: wrap;
   padding: 12px;
+margin-left: 500px;
+  align-items: center;
+  
 }
 h3{
-  width: 32%;
+ margin: 0;
 }
 .radioButton {
   padding: 16px;
-  /* padding-left: 44px; */
 }
 .labelButton {
   padding: 16px;
   
 }
+.userAction{
+  width: 40%;
+  text-align: left;
+}
 .songDescription {
-  margin-right: 12%;
+  margin-right: 2%;
+  width: 250px;
+  text-align: right;
 }
 .songInfo .input{
   background-color: black;
@@ -91,10 +109,7 @@ h3{
   margin-left: 12px;
   border-radius:12px ;
 }
-.songInfo .valueButton{
-  margin-left:28%;
-  margin-top: -4%;
-}
+
 .songInfo .valueButton input{
   background-color: black;
   color: white;
@@ -105,15 +120,29 @@ h3{
   
   border-radius: 12px;
 }
+.songInfo .valueButton input:disabled{
+   color: #c2c2c2; 
+
+}
+.songInfo .userAction .input:disabled{
+  color:#c2c2c2;
+}
 .barGraph {
-  width: 44%;
+  width: 600px;
   margin-left: 28%;
 }
 .saveButton {
   margin-left: 28%;
   text-align: center;
-  width: 64%;
-  background-color: blueviolet;
+  width: 600px;
+  background-color: #6741D9;
   padding: 16px ;
   border-radius: 12px;
+
 }
+.saveButton:hover{
+  border-color: #F0C3F1;
+}
+.saveButton:disabled {
+  background-color: #c2c2c2;
+} 
